# cookiecutter-data-science

./: README.md  cookiecutter.json  pyproject.toml
{{ cookiecutter.repo_name }}/: Makefile  pyproject.toml
