[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.email }}>"]
license = "{{ cookiecutter.open_source_license }}"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
python-dotenv = "^0.11.0"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.2"
coverage = "^5.0.3"
awscli = "^1.18.2"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
